# Capstone

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  uwb_drivers.cpp
app/src/main/java/com/example/testapp/: MainActivity.kt  MediaNotificationListener.kt
app/src/main/java/com/uwb/gesture/: GestureAction.kt  GestureService.kt  NativeLib.kt  UWBClassifier.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
